--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>12.5</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <main>
@@ -14,9 +15,11 @@
                 <h2 class="quote"></h2>
                 <h3 class="author"></h3>
             </div>
-            <div>
-                <button class="trigger"> Random quote </button>
-                <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+            <div class="send">
+                <ul>
+                    <li class="trigger"><a href="#">Random quote</a></li>
+                    <li><a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a></li>
+                </ul>
             </div>
         </main>
         <script
